clusters/homelab/apps/plex/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plex
  labels:
    name: plex
    backup: velero
    # Enable Istio Ambient mode for better performance
    istio.io/dataplane-mode: ambient
