clusters/homelab/apps/plex/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: plex-gateway
  namespace: plex
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - plex.daddyshome.fr
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: MUTUAL
      credentialName: plex-tls-certificate
    hosts:
    - plex.daddyshome.fr
