clusters/homelab/apps/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: plex
  annotations:
    haproxy-ingress.github.io/secure-backends: "true"
    haproxy-ingress.github.io/secure-verify-ca-secret: client-ca-secret/ca
    haproxy-ingress.github.io/ssl-redirect: "true"
spec:
  ingressClassName: haproxy
  tls:
  - hosts:
    - plex.daddyshome.fr
    secretName: plex-tls-certificate
  rules:
  - host: plex.daddyshome.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex
            port:
              number: 32400
